# XFFmpegPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mao/ffmpegplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mao/ffmpegplayer/: GLPlayerActivity2.kt  MainActivity.kt  OpenGLPlayerActivity2.kt  PlayerActivity.kt
app/src/main/java/com/mao/ffmpegplayer/application/: XFApplication.kt
app/src/main/res/layout/: activity_glplayer2.xml  activity_main.xml  activity_player.xml
app/src/test/java/com/mao/ffmpegplayer/: ExampleUnitTest.kt
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/src/androidTest/java/com/mao/ffmpeglib/: ExampleInstrumentedTest.kt
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: FFMediaPlayer.cpp  ffmpeg_utils.cpp  native_MediaPlayer.cpp
ffmpeglib/src/main/cpp/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decode_state_cb.cpp  i_decode_state_cb.h  i_decoder.h
ffmpeglib/src/main/cpp/decoder/audio/: a_decoder.cpp  a_decoder.h
ffmpeglib/src/main/cpp/decoder/video/: v_decoder.cpp  v_decoder.h
ffmpeglib/src/main/cpp/ffplayer/: DecodeAudioElement.cpp  DecodeVideoElement.cpp  DecodeVideoElement.h  DemuxElement.cpp  FFplayer.cpp  RenderAudioElement.cpp  RenderVideoElement.cpp  SinkFramePad.cpp  SinkPacketPad.cpp  safe_queue.h
ffmpeglib/src/main/cpp/include/: ffmpeg_utils.cpp
ffmpeglib/src/main/cpp/include/libavutil/: ffversion.h
ffmpeglib/src/main/cpp/muxer/: ff_repack.cpp  ff_repack.h
ffmpeglib/src/main/cpp/opengl/drawer/: drawer.cpp  drawer.h  video_drawer.cpp  video_drawer.h
ffmpeglib/src/main/cpp/opengl/drawer/proxy/: def_drawer_proxy_impl.cpp  def_drawer_proxy_impl.h  drawer_proxy.cpp  drawer_proxy.h
ffmpeglib/src/main/cpp/opengl/egl/: egl_surface.cpp  egl_surface.h  elg_core.cpp  elg_core.h
ffmpeglib/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  gl_player.cpp  gl_player.h  player.cpp  player.h
ffmpeglib/src/main/cpp/render/: BaseGLRender.h  one_frame.h
ffmpeglib/src/main/cpp/render/audio/: AudioGLRender.cpp  AudioGLRender.h  audio_render.h  opensl_render.cpp  opensl_render.h
ffmpeglib/src/main/cpp/render/video/: video_render.h
ffmpeglib/src/main/cpp/render/video/native_render/: native_render.cpp  native_render.h
ffmpeglib/src/main/cpp/render/video/opengl_render/: opengl_render.cpp  opengl_render.h
ffmpeglib/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h  ImageDef.h  const.h  logger.h  time.c
ffmpeglib/src/main/java/com/mao/ffplayer/: FFMediaPlayer.kt
ffmpeglib/src/main/java/com/mao/ffplayer/constant/: PlayerConstants.kt
ffmpeglib/src/main/java/com/mao/ffplayer/glsurface/: FFGLSurfaceView.kt  OnGestureCallback.kt
ffmpeglib/src/main/java/com/mao/ffplayer/surfaceview/: NormalSurfaceView.kt
ffmpeglib/src/test/java/com/mao/ffmpeglib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
shell/: build_android.sh  config-env.sh
